// To regenerate protobuf golang code:
// protoc --go_out=. --go_opt=paths=source_relative snapshot/snapshot.proto
syntax = "proto3";

package snapshot;
option go_package = "./snapshot";

message FileChunks {
  bytes whole_hash = 1;            // 32-byte BLAKE3 hash
  repeated Chunk chunks = 2;       // The chunks of this file created using CDC - Content defined chunking

}

message Chunk {
  bytes hash = 1; // Chunk hash
  int64 size = 2; // Chunk size (Using CDC - Content defined chunking)
  int64 offset = 3; // The chunk's offset in file
}

message ProjectSnapshot {
  string version = 1;                // Format version
  int64 timestamp = 2;               // Unix nanoseconds
  map<string, FileChunks> files = 3; // path â†’ file metadata
}

message FileSync {
  string path = 1;    // The relative file path
  bytes content = 2;  // The raw file content
  bytes checksum = 3; // The checksum of the file content
}

message SyncFileMessage {
  oneof payload {
    string StartSync = 1; // Special signal telling the receiver to prepare
                          // receiving a new file
    FileSync file = 2;    // The file to sync
    string EndSync = 3;   // Special signal telling the reveiver that the file
                          // should be fully synced.
  }
}
